k8s/prod/users/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: users-prod
  labels:
    domain: users
    environment: prod

    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
